# qrcode.show

./: Cargo.toml  README.md  README.txt  qrcode.show.1  shell.nix
axum-server/: Cargo.toml
axum-server/src/: lib.rs  main.rs
cf-worker/: .gitignore  Cargo.toml  package.json  wrangler.toml
cf-worker/src/: lib.rs  package.json
demo/: demo.tape
libs/: Cargo.toml
libs/src/: core.rs  lib.rs  qrcode.show.html
templates/: base.html
