[package]
name = "axum-server"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libs = { path = "../libs" }
axum = { version = "0.8", default-features = false, features = ["original-uri", "form"] }
tracing = "0.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "json"] }
hyper = { version = "1.10", features = ["full"] }
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.7", features = ["fs", "trace"] }
tracing-subscriber = "0.3"
