[package]
name = "cf-worker"
version = "0.1.0"
authors = ["Arijit Basu <sayanarijit@gmail.com>"]
edition = "2024"
publish = false

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
worker = { version = "0.8", features = ["http", "axum"] }
cfg-if = "1.0"
wasm-bindgen-futures = "0.4"
axum-server = { path = "../axum-server" }
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", features = ["util"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
